--- a/live-build-config/auto/config
+++ b/live-build-config/auto/config
@@ -6,21 +6,14 @@ kalisec_mirror=http://archive.kali.org/kali-security
 
 ### DO NOT EDIT THE REST OF THIS FILE ###
 
-# live-build doesn't work if --parent-debian-distribution is unknown of
-# debian-cd => we have to put a symlink so that it deals with kali like wheezy
-
-if [ ! -e /usr/share/live/build/data/debian-cd/kali ]; then
-       echo "ERROR: Run this first"
-       echo "ln -sf wheezy /usr/share/live/build/data/debian-cd/kali"
-       exit 1
-fi
-
 public_kali_mirror=http://http.kali.org/kali
 public_kalisec_mirror=http://security.kali.org/kali-security
 
 # Detect target architecture and filter args
 temp=""
 arch=$(dpkg --print-architecture)
+dist="kali" # essentially means don't use systemd for now (see bottom)
+lb_opts=""
 while [ $# -gt 0 ]; do
    	arg="$1"
 	case "$arg" in
@@ -33,6 +26,15 @@ while [ $# -gt 0 ]; do
 	--proposed-updates)
 		enable_pu="1"
 		;;
+	--kali-dev)
+		dist="kali-dev"
+		# No security repo
+		lb_opts="--security false --initsystem systemd"
+		;;
+	--kali-rolling)
+		dist="kali-rolling"
+		lb_opts="--initsystem systemd"
+		;;
 	*)
 		temp="$temp "'"'"$arg"'"'
 		;;
@@ -41,21 +43,37 @@ while [ $# -gt 0 ]; do
 done
 eval set -- "$temp"
 
+# live-build doesn't work if --parent-debian-distribution is unknown of
+# debian-cd => we have to put a symlink so that it deals with kali like jessie
+if [ ! -e ${LIVE_BUILD:-/usr/share/live/build}/data/debian-cd/$dist ]; then
+        if [ -w ${LIVE_BUILD:-/usr/share/live/build}/data/debian-cd ]; then
+                ln -sf jessie ${LIVE_BUILD:-/usr/share/live/build}/data/debian-cd/$dist
+        else
+                echo "ERROR: Run this first:"
+                echo "ln -sf jessie ${LIVE_BUILD:-/usr/share/live/build}/data/debian-cd/$dist"
+                exit 1
+        fi
+fi
+
 case "$arch" in
     amd64)
-	lb_opts="--debian-installer live"
+	lb_opts="$lb_opts --debian-installer live"
     ;;
     i386)
-	lb_opts="--debian-installer live --linux-flavours 686-pae"
+	lb_opts="$lb_opts --debian-installer live --linux-flavours 686-pae"
     ;;
     armel|armhf)
-	lb_opts="--binary-images hdd --binary-filesystem ext4 --chroot-filesystem none"
+	lb_opts="$lb_opts --binary-images hdd --binary-filesystem ext4 --chroot-filesystem none"
     ;;
     *)
 	echo "WARNING: configuration not tested on arch $arch" >&2
-	lb_opts=""
     ;;
 esac
+
+if [ ! -z "$http_proxy" ]
+then
+        lb_opts="$lb_opts --apt-http-proxy \"$http_proxy\""
+fi
 
 rm -f config/archives/kali-proposed-updates.list.*
 if [ -n "$enable_pu" ]; then
@@ -67,8 +85,8 @@ if [ -n "$enable_pu" ]; then
 fi
 
 lb config noauto \
-	--distribution "kali" \
-	--debian-installer-distribution "kali" \
+	--distribution "$dist" \
+	--debian-installer-distribution "$dist" \
 	--archive-areas "main contrib non-free" \
 	--bootstrap cdebootstrap \
 	--cdebootstrap-options "--keyring=/usr/share/keyrings/kali-archive-keyring.gpg --suite-config=wheezy" \
@@ -88,5 +106,11 @@ lb config noauto \
 	--iso-volume "Knife Live" \
 	--linux-packages linux-image \
 	--bootappend-live "boot=live noconfig=sudo username=root hostname=knife" \
+        --apt-options "--force-yes --yes" \
 	$lb_opts \
 	"$@"
+
+if [ $dist = kali ]; then
+        # Don' use systemd for now
+        sed -i -e 's/systemd/sysvinit/' config/package-lists/live.list.chroot
+fi
